取得型API作成
